--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "nodemon": "^2.0.4",
     "rimraf": "^3.0.2",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.5",
+    "dotenv": "^8.2.0"
   },
   "dependencies": {
     "@types/express": "^4.17.6",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.20"
   }
 }
