--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/mongoose": "^5.7.27",
     "@types/node": "^14.0.13",
+    "dotenv": "^8.2.0",
     "nodemon": "^2.0.4",
     "rimraf": "^3.0.2",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.5",
-    "dotenv": "^8.2.0"
+    "typescript": "^3.9.5"
   },
   "dependencies": {
     "@types/express": "^4.17.6",
