--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/hapi__joi": "^17.1.3",
     "@types/mongoose": "^5.7.27",
     "@types/node": "^14.0.13",
     "nodemon": "^2.0.4",
@@ -23,10 +24,11 @@
     "typescript": "^3.9.5"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@types/express": "^4.17.6",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "mongoose": "^5.9.20"
   }
 }
