--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.6",
+    "@types/object-hash": "^1.3.3",
     "@types/hapi__joi": "^17.1.3",
     "@types/mongoose": "^5.7.27",
     "@types/node": "^14.0.13",
@@ -25,11 +27,11 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
-    "@types/express": "^4.17.6",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "moment": "^2.27.0",
-    "mongoose": "^5.9.20"
+    "mongoose": "^5.9.20",
+    "object-hash": "^2.0.3"
   }
 }
